--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "react": "^18.2.0",
     "react-alice-carousel": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-query": "^3.39.3",
+    "react-recaptcha-google": "^1.1.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.4",
+    "scrollreveal": "^4.0.9",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
