--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.8",
+    "@react-three/drei": "^9.105.4",
+    "@react-three/fiber": "^8.16.2",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
+    "dat.gui": "^0.7.9",
     "moment-timezone": "^0.5.45",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.8.0",
@@ -23,13 +26,18 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-scroll": "^1.9.0",
+    "react-spring": "^9.7.3",
     "react-toastify": "^10.0.4",
     "scrollreveal": "^4.0.9",
+    "skinview3d": "^3.0.1",
+    "three": "^0.164.1",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/es6-shim": "^0.31.45",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/three": "^0.164.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.55.0",
@@ -39,6 +47,7 @@
     "postcss": "^8.4.34",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.12",
+    "skinview-utils": "^0.7.1",
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.8"
   }
